objects/Contract_Lifecycle__c.object
<CustomObject>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Contract__r.TR_Retention__Contract_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Contract__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <formula>TEXT(Contract__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Total_Price__c</fullName>
        <formula>Contract__r.LCRM_Total_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Transaction_Type__c</fullName>
        <formula>TEXT(Contract__r.LCRM_Transaction_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Lifecycle (Previous Contracts)</relationshipLabel>
        <relationshipName>Future_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Previous_Contract_End_Date__c</fullName>
        <formula>Previous_Contract__r.TR_Retention__Contract_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Contract_Start_Date__c</fullName>
        <formula>Previous_Contract__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Contract_Status__c</fullName>
        <formula>TEXT(Previous_Contract__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Contract_Total_Price__c</fullName>
        <formula>Previous_Contract__r.LCRM_Total_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Contract_Transaction_Type__c</fullName>
        <formula>TEXT(Previous_Contract__r.LCRM_Transaction_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Lifecycle (Future Contract)</relationshipLabel>
        <relationshipName>Previous_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Lifecycle</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Contract Lifecycle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Lifecycle</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>